--- a/export/domestic.html
+++ b/export/domestic.html
@@ -20,7 +20,7 @@ a.button.on { background-color: var(--mark-back-color); color: white; }
 
 <header>
   <a href="javascript:void(0);" class="logo" style="cursor: default;">
-    <img src="./resources/img/ic-logo-dbfi.png" style="margin-top: 8px;"/><span style="margin-left: 40px;">DB HTS 도움말</span>
+    <img src="./resources/img/ic-logo-dbfi.png" style="margin-top: 8px;"/><span style="margin-left: 40px;">온라인도움말</span>
   </a>
   <a href="./domestic.html" class="button on">국내주식</a><!-- <mark>국내주식</mark> -->
   <div class="floating-export-wrapper">
@@ -47,10 +47,8 @@ a.button.on { background-color: var(--mark-back-color); color: white; }
 		</div>
 		<div class="col col-80 bf-detail-area" id="bf-contents" style="overflow-y: hidden;">
 		  <div id="footer-copyright">
-		    <div>
-		      <img src="./img/ic-db-bottom.png"/>
 	      </div>
-	      <div>© 2020 DB금융투자 All Rights Reserved.</div>
+	      <div>© 2020, DB금융투자 All Rights Reserved.</div>
       </div>
 		  <iframe id="contents-detail" name="ifrm" width="100%" height="100%"></iframe>
 		</div>
@@ -78,7 +76,7 @@ a.button.on { background-color: var(--mark-back-color); color: white; }
  
 <script>
 /*<![CDATA[*/
-var SOURCE = "[{\"expanded\":true,\"folder\":true,\"key\":\"00001\",\"partsel\":false,\"selected\":false,\"title\":\"[00010] \uAD6D\uB0B4\uC8FC\uC2DD\",\"children\":[{\"key\":\"00003\",\"partsel\":false,\"selected\":false,\"title\":\"KOSPI\"}]},{\"key\":\"00002\",\"partsel\":false,\"selected\":false,\"title\":\"[00020] \uB098\uC2A4\uB2E5\"},{\"key\":\"00004\",\"partsel\":false,\"selected\":false,\"title\":\"[00030] \uB098\uC2A4\uD53C\"}]"; // [{"expanded":true,"folder":true,"key":"_3","partsel":false,"selected":false,"title":"국내주식이란","children":[{"key":"0001","partsel":false,"selected":false,"title":"국내주식의 특징"},{"key":"0002","partsel":false,"selected":false,"title":"신용거래"},{"key":"0003","partsel":false,"selected":false,"title":"춘향휴게소"},{"key":"0004","partsel":false,"selected":false,"title":"INTERVAL"}]},{"expanded":true,"folder":true,"key":"_3","partsel":false,"selected":false,"title":"해외주식이란","children":[{"key":"0008","partsel":false,"selected":false,"title":"새 도움말"},{"expanded":true,"folder":true,"key":"_2","partsel":false,"selected":false,"title":"개 폴더","children":[{"key":"0009","partsel":false,"selected":false,"title":"새 도움말"}]},{"folder":true,"key":"_2","partsel":false,"selected":false,"title":"새 폴더"}]}];
+var SOURCE = "[{\"expanded\":true,\"folder\":true,\"key\":\"00001\",\"partsel\":false,\"selected\":false,\"title\":\"[00010] \uAD6D\uB0B4\uC8FC\uC2DD\",\"children\":[{\"key\":\"00003\",\"partsel\":false,\"selected\":false,\"title\":\"KOSPI\"}]},{\"key\":\"00002\",\"partsel\":false,\"selected\":false,\"title\":\"[00020] \uB098\uC2A4\uB2E5\"},{\"key\":\"00004\",\"partsel\":false,\"selected\":false,\"title\":\"[00030] \uB098\uC2A4\uD53C\"},{\"key\":\"00005\",\"partsel\":false,\"selected\":false,\"title\":\"\uC0C8 \uB3C4\uC6C0\uB9D0\"}]";
 window.alert = function(message) {
 	var x = document.getElementById("snackbar");
 	x.className = "show";
@@ -135,9 +133,9 @@ function collapseAll() {
 function initTree() {
   $('#tree').fancytree({
 	  extensions: ["filter"],
-	  filter: {  // override default settings
+	  filter: {  		// override default settings
 	    counter: false, // No counter badges
-	    mode: "hide"  // "dimm": Grayout unmatched nodes, "hide": remove unmatched nodes
+	    mode: "hide"  	// "dimm": Grayout unmatched nodes, "hide": remove unmatched nodes
 	  },
     checkbox: false,
     selectMode: 3,
