--- a/src/main/resources/static/empty-content.html
+++ b/src/main/resources/static/empty-content.html
@@ -5,11 +5,12 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
 <style>
+html, body { width: 100%; height: 100%; margin: 0; padding: 0; }
+#empty-img-wrapper { width:100%; height: 100%; background-image: url('/img/bg-logo-gray.jpg'); }
 </style>
 </head>
 <body>
 <div id="empty-img-wrapper">
-  <img src="/img/bg-empty.png" />
 </div>
 </body>
 </html>
