--- a/export/domestic.html
+++ b/export/domestic.html
@@ -95,7 +95,7 @@ a.button.on {
 	<script>
 
 	/*<![CDATA[*/
-var SOURCE = "[{\"expanded\":true,\"folder\":true,\"key\":\"00001\",\"partsel\":false,\"selected\":false,\"title\":\"[00010] \uAD6D\uB0B4\uC8FC\uC2DD\",\"children\":[{\"key\":\"00016\",\"partsel\":false,\"selected\":false,\"title\":\"\uC0C8 \uB3C4\uC6C0\uB9D0\"}]},{\"key\":\"00002\",\"partsel\":false,\"selected\":false,\"title\":\"[00020] \uB098\uC2A4\uB2E51123\"},{\"key\":\"00004\",\"partsel\":false,\"selected\":false,\"title\":\"[00030] \uB098\uC2A4\uD53C\"}]";
+var SOURCE = "[{\"expanded\":false,\"folder\":true,\"key\":\"00001\",\"partsel\":false,\"selected\":false,\"title\":\"[00010] \uAD6D\uB0B4\uC8FC\uC2DD\"},{\"key\":\"00002\",\"partsel\":false,\"selected\":false,\"title\":\"[00020] \uB098\uC2A4\uB2E51123\"},{\"key\":\"00004\",\"partsel\":false,\"selected\":false,\"title\":\"[00030] \uB098\uC2A4\uD53C\"}]";
 window.alert = function(message) {
 	var x = document.getElementById("snackbar");
 	x.className = "show";
