--- a/src/main/resources/static/viewer/viewer.html
+++ b/src/main/resources/static/viewer/viewer.html
@@ -9,6 +9,11 @@
 <link rel="stylesheet" href="viewer.css">
 <!-- This snippet is used in production (included from viewer.html) -->
 <link rel="resource" type="application/l10n" href="locale/locale.properties">
+<style>
+body { background: white; }
+.toolbar { display: none; }
+#viewerContainer { top: 12px; }
+</style>
 <script src="../build/pdf.js"></script>
 <script>
 pdfDefaultUrl = "compressed.tracemonkey-pldi-09.pdf";
