--- a/modules/hp-group-template.html
+++ b/modules/hp-group-template.html
@@ -7,23 +7,13 @@
 	content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
 <title>DB금융투자 HTS 도움말</title>
 <link href="./resources/img/favicon.ico" rel="shortcut icon" type="image/ico" />
+<link rel="stylesheet" href="./resources/css/noto-sans-kr.css">
 <link rel="stylesheet" href="./resources/css/foundation.css">
 <link rel="stylesheet" href="./resources/foundation-icons/foundation-icons.css" />
 <link rel="stylesheet" href="./resources/jquery/fancytree/skin-lion/ui.fancytree.css">
 <link rel="stylesheet" href="./resources/css/global.css">
 <style>
-/* .top-bar { background-color: white; border-bottom: 1px solid rgba(10, 10, 10, 0.25); }
-.top-bar, .top-bar ul { background-color: white; }
-.top-bar-right li:last-child { margin-left: 3px; }
-.menu .menu-text { width: 252px; padding: 0 1rem; display: inline-flex; }
-.logo-img { background-image: url('../img/logo.svg'); width: 120px; height: 36px; }
-.logo-text { margin-top: 12px; }
-.menu .is-active { background-image: url('/img/bg-underline.gif'); background-position: bottom; background-repeat: no-repeat; }
-.menu .is-active > a { background-color: inherit; color: #05854A; }
-.accordion-menu li { width: inherit; }
-.breadcrumbs { margin: 0; }
-.callout .nav { width: inherit; margin-top: 7px; margin-left: 16px; } */
-
+body { font-family: "Noto Sans KR", "맑은 고딕"; }
 .tree-wrapper { background-image: url('/img/bg-tree-gray.jpg'); border-right: 1px solid #ccc; overflow-y: auto; }
 .context-menu-list.context-menu-root {
   border-radius: 0; -webkit-box-shadow: 1px 1px 2px rgba(0,0,0,.5); box-shadow: 1px 1px 2px rgba(0,0,0,.5); }
@@ -45,54 +35,56 @@
 
 
 <div class="grid-y medium-grid-frame">
-
-<!-- Navigation -->
-<div class="title-bar" data-responsive-toggle="realEstateMenu" data-hide-for="small" style="display: none;">
-  <button class="menu-icon" type="button" data-toggle></button>
-  <div class="title-bar-title">Menu</div>
-</div>
-
-<div>
-	<div class="top-bar">
-	  <div class="top-bar-left">
-	    <ul class="menu" data-responsive-menu="accordion">
-	      <li class="menu-text">			
-	      	<div class="logo-img"></div>
-	      	<div class="logo-text">온라인매뉴얼</div>
-		  </li>
-	      <li th:each="item : ${group}" th:class="|${item.className}|" >
-	      	<a th:href="|./${item.groupId}.html|" th:text="${item.name}"></a>
-	      </li>
-	    </ul>
-	  </div>
-	</div>
-</div>
-
-<div class="bf-body-wrapper">
-
-<div class="grid-x contents-grid-wrapper">
 	
-	<!-- 좌측 컨텐츠그룹 선택 및 메뉴 구조 TREE -->
-	<div class="cell small-3 tree-wrapper">
-		<div id="tree"></div>
+	<!-- Navigation -->
+	<div class="title-bar" data-responsive-toggle="realEstateMenu" data-hide-for="small" style="display: none;">
+	  <button class="menu-icon" type="button" data-toggle></button>
+	  <div class="title-bar-title">Menu</div>
 	</div>
 	
-	<!-- 컨텐츠 상세내용 --> <!-- 706px for A4 -->
-	<div class="cell small-9 contents-wrapper">
-	  <div class="grid-x" style="height: calc(100% - 65px);">
-	    <iframe id="contents-detail" class="cell" width="100%" height="100%" src="/empty-content.html"></iframe>
-	  </div>
-    </div>
+	<div>
+		<div class="top-bar">
+		  <div class="top-bar-left">
+		    <ul class="menu" data-responsive-menu="accordion">
+		      <li class="menu-text">			
+		      	<div class="logo-img"></div>
+		      	<div class="logo-text">온라인매뉴얼</div>
+			  </li>
+		      <li th:each="item : ${group}" th:class="|${item.className}|" >
+		      	<a th:href="|./${item.groupId}.html|" th:text="${item.name}"></a>
+		      </li>
+		    </ul>
+		  </div>
+		</div>
+	</div>
 	
-</div>
+	<div class="bf-body-wrapper">
+	
+	<div class="grid-x contents-grid-wrapper">
+		
+		<!-- 좌측 컨텐츠그룹 선택 및 메뉴 구조 TREE -->
+		<div class="cell small-3 tree-wrapper">
+			<div id="tree"></div>
+		</div>
+		
+		<!-- 컨텐츠 상세내용 --> <!-- 706px for A4 -->
+		<div class="cell small-9 contents-wrapper">
+		  <div class="grid-x" style="height: calc(100% - 7px);">
+		    <iframe id="contents-detail" class="cell" width="100%" height="100%" frameborder="0" border="0" style="border:0;" src="/empty-content.html"></iframe>
+		  </div>
+	    </div>
+		
+	</div>
+	
+	</div>
+	
+	<div class="cell shrink footer">
+	  <div class="grid-x">
+		  <div class="footer-text cell small-10 text-center">© 2020, DB금융투자 Co., Ltd. All Right Reserved.</div>
+		  <div class="cell small-2"><img src="./resources/img/logo.svg" style="width: 105px; margin-right: 36px;" class="float-right"></div>
+	  </div>
+	</div>
 
-</div>
-
-<div class="cell shrink footer">
-  <div class="grid-x">
-	  <div class="footer-text cell small-10 text-center">© 2020, DB금융투자 Co., Ltd. All Right Reserved.</div>
-	  <div class="cell small-2"><img src="./resources/img/logo.svg" style="width: 105px; margin-right: 36px;" class="float-right"></div>
-  </div>
 </div>
 
 <script src="./resources/jquery/jquery-3.5.1.min.js"></script>
